--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
-
-#Durante desenvolvimento nao fazer cache
-spring.thymeleaf.mode=html
-spring.thymeleaf.cache=false
+spring.jpa.hibernate.ddl-auto=drop
